# carib-comp-ont

./: .env.example  .gitignore  HELD_OUT.md  README.md  pyproject.toml  requirements.txt
docs/: Literature Review for Legal Ontologies.md  bugs_and_fixes.md  cbu-31_research_prompt.md  cbu-31_set1_critique.md  cbu-31_set1_fixup_prompt.md  demo_script.md  related_work.set1.md
docs/outreach/: email_draft.md  one_pager.md
kgforge/: __init__.py
kgforge/approval/: __init__.py  base.py  filesystem.py  git.py
kgforge/engine/: __init__.py  ask.py  curator.py  extractor.py  highlight.py  pdf_text.py  prompt.py  schema_builder.py  store.py  to_turtle.py  vault_writer.py
kgforge/pack/: __init__.py  loader.py  model.py
kgforge/ui/: app.py  (+2 more)
schema/: carib_compliance.ttl
scripts/: ask.py  curator.py  extractor.py  highlight.py  load_to_oxigraph.py  to_turtle.py
sparql/: cq1_obligations_on_controller.rq  cq2_regulators.rq  cq3_definitions.rq
vault/: dpa2020.md  dpa2020_ico.md  dpa2020_obligation_lawful_processing.md  dpa2020_s2.md  dpa2020_s2_data_controller.md  dpa2020_s2_data_processor.md  dpa2020_s2_data_subject.md  dpa2020_s2_personal_data.md  dpa_2020_s6_biometric_data.md  dpa_2020_s6_commissioner.md  dpa_2020_s6_court.md  dpa_2020_s6_data_controller.md  dpa_2020_s6_data_controller_representative.md  dpa_2020_s6_data_processor.md  dpa_2020_s6_data_protection_act_2020.md  dpa_2020_s6_data_protection_standards.md  dpa_2020_s6_data_subject.md  dpa_2020_s6_disclosure_to_data_subject_requirements.md  dpa_2020_s6_genetic_data.md  dpa_2020_s6_good_practice.md  dpa_2020_s6_health_professional.md  dpa_2020_s6_information_commissioner.md
(+32 files in other folders)
